# biblewise

./: .dockerignore  .gitignore  Dockerfile  LICENSE  QUICKSTART.md  README.md  Taskfile.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
.plans/: ARCHITECTURE.md  DEMO.md  DEPLOYMENT.md  IMPROVEMENTS.md  INDEX.md  README.md  REFACTORING.md  STATUS.md  SUMMARY.md
biblewise/: __init__.py  books.py  db.py  fetch_bible.py  games.py  main.py  scope.py  search.py  ui.py
docs/: pr-docstrings.md  pr-ux-followup.md  pr-ux-usability.md
tests/: conftest.py  test_books.py  test_db.py  test_fetch_bible.py  test_games.py  test_scope.py  test_search.py
