[project]
name = "biblewise"
version = "0.1.0"
description = "Terminal Bible memorization and reference training"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.28.0",
    "rich>=13.0.0",
    "click>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[project.scripts]
biblewise = "biblewise.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["biblewise"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
